<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MobileAuthActivity">

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+82"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/nanumgothic_font"/>

        <EditText
            android:id="@+id/mobile_digit_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="휴대폰번호"
            android:inputType="phone"/>

    </LinearLayout>

    <EditText
        android:id="@+id/verification_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/verification_code"
        android:inputType="number"
        android:visibility="gone"/>

    <Button
        android:id="@+id/send_verification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/verification_code_input"
        android:layout_marginHorizontal="20dp"
        android:text="@string/send_verification_button"/>

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_verification_button"
        android:layout_marginHorizontal="20dp"
        android:text="@string/verify_button"
        android:enabled="false"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_button"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_button"
        android:enabled="false"/>

</RelativeLayout>